fix: increase z-index for scrollbar thumb to improve visibility

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -458,7 +458,7 @@ html::-webkit-scrollbar-thumb:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 10;
+  z-index: 998;
   pointer-events: all;
   user-select: none;
   font-weight: bold;
